--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,45 @@
-[project]
-name = "jvm-mcp-server"
-version = "0.1.0"
-description = "A JVM monitoring MCP server based on Arthas"
-readme = "README.md"
-requires-python = ">=3.8"
-dependencies = [
-    "mcp[cli]>=1.3.0",
-    "telnetlib3>=2.0.0",
-    "psutil>=5.9.0",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0.0",
-    "black>=23.0.0",
-    "isort>=5.0.0",
-    "mypy>=1.0.0",
-]
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.black]
-line-length = 100
-target-version = ["py38"]
+[project]
+name = "jvm-mcp-server"
+version = "0.1.0"
+description = "基于Arthas的JVM监控MCP服务器实现"
+readme = "README.md"
+requires-python = ">=3.10"
+license = "MIT"
+keywords = ["java", "jvm", "monitoring", "arthas", "mcp"]
+authors = [
+    { name = "xzq-xu", email = "your.email@example.com" }
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: Monitoring",
+]
+dependencies = [
+    "mcp[cli]>=1.3.0"
+]
 
-[tool.isort]
-profile = "black"
-line_length = 100
-multi_line_output = 3
+[project.scripts]
+jvm-mcp-server = "jvm_mcp_server.__main__:main"
 
-[tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
+[project.urls]
+Homepage = "https://github.com/xzq-xu/jvm-mcp-server"
+Repository = "https://github.com/xzq-xu/jvm-mcp-server.git"
+Issues = "https://github.com/xzq-xu/jvm-mcp-server/issues"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/jvm_mcp_server"]
+
+[tool.hatch.version]
+path = "src/jvm_mcp_server/__init__.py" 
