--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "jvm-mcp-server"
-version = "0.1.0"
+version = "0.1.1"
 description = "基于Arthas的JVM监控MCP服务器实现"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -27,7 +27,8 @@ classifiers = [
     "Topic :: System :: Monitoring",
 ]
 dependencies = [
-    "mcp[cli]>=1.3.0"
+    "mcp[cli]>=1.3.0",
+    "paramiko>=3.5.1",
 ]
 
 [project.scripts]
