--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ARTHAS_SSH_HOST=root@192.168.23.159
+ARTHAS_SSH_HOST=root@192.168.34.88
 ARTHAS_SSH_PORT=22
-ARTHAS_SSH_PASSWORD=******
+ARTHAS_SSH_PASSWORD=ShunW!pre@
 
