--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.10"
 license = "MIT"
 keywords = ["java", "jvm", "monitoring", "arthas", "mcp"]
 authors = [
-    { name = "xzq-xu", email = "your.email@example.com" }
+    { name = "xzq-xu", email = "1325732643@qq.com" }
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
