--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-ARTHAS_SSH_HOST=root@192.168.34.70
-ARTHAS_SSH_PORT=22
-ARTHAS_SSH_PASSWORD=****
+SSH_HOST=root@192.168.34.70
+SSH_USER=22
+SSH_KEY=****
 
