feat: add Kubernetes support via kubectl exec
- Add kube_context, kube_namespace, kube_pod, kube_container parameters
- Execution priority: Kubernetes > SSH > Local
- Uses subprocess.run with command list for security
- Update .env.example with Kubernetes configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,27 @@
-SSH_HOST=root@192.168.34.70
-SSH_USER=22
-SSH_KEY=****
+# JVM MCP Server Configuration
+# Choose ONE mode: Kubernetes, SSH, or Local (no env vars needed)
+
+# ============================================
+# KUBERNETES MODE (kubectl exec)
+# ============================================
+# Required:
+# KUBE_POD=hybris-fo-0
+
+# Optional:
+# KUBE_NAMESPACE=hybris
+# KUBE_CONTEXT=rubix-dig-stg-webshop-admin
+# KUBE_CONTAINER=hybris
+
+# ============================================
+# SSH MODE
+# ============================================
+# SSH_HOST=root@192.168.34.70
+# SSH_PORT=22
+# SSH_PASSWORD=****
+# SSH_KEY=/path/to/ssh/key
+
+# ============================================
+# LOCAL MODE
+# ============================================
+# No environment variables needed - JDK tools run locally
 
